[gd_scene load_steps=2 format=3 uid="uid://vdg314f1160w"]

[ext_resource type="Script" uid="uid://bvrsx4cp26q5t" path="res://addons/game_template/menu/scripts/menu.gd" id="1_s0jjj"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_s0jjj")
start_game_scene = "uid://cvwmnd6o5yauf"
settings_scene = "uid://bc3f8ayb78poq"

[node name="Background" type="Panel" parent="."]
modulate = Color(0, 0, 0, 0.470588)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -73.0
offset_right = 64.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game
"

[node name="SettingsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="CreditButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credit"

[node name="ExitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_up"]
